// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declareQueries works 1`] = `
<queries(mockConstructor)
  token="foo"
>
  <mockConstructor
    foo={
      RemoteInitial {
        "_tag": "RemoteInitial",
        "progress": None {
          "_tag": "None",
        },
      }
    }
    token="foo"
  >
    {"token":"foo","foo":{"_tag":"RemoteInitial","progress":{"_tag":"None"}}}
  </mockConstructor>
</queries(mockConstructor)>
`;

exports[`declareQueries works with querySync 1`] = `
<queries(mockConstructor)
  token="foo"
>
  <mockConstructor
    foo={
      RemoteSuccess {
        "_tag": "RemoteSuccess",
        "value": "foo",
      }
    }
    token="foo"
  >
    {"token":"foo","foo":{"value":"foo","_tag":"RemoteSuccess"}}
  </mockConstructor>
</queries(mockConstructor)>
`;
